# openframe

./: .gitignore  AGENTS.md  Cargo.toml  package-lock.json  package.json  quit.txt  style.css
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: TimelineEditor.tsx
apps/desktop/src/stores/: mediaStore.ts  timelineStore.ts
apps/desktop/src/types/: media.ts  timeline.ts
assets/: README.md
crates/ai/: Cargo.toml
crates/ai/src/: lib.rs
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/export/: Cargo.toml
crates/export/src/: lib.rs
crates/media/: Cargo.toml
crates/media/src/: lib.rs
crates/subtitles/: Cargo.toml
crates/subtitles/src/: lib.rs
docs/phase-0/: README.md  architecture.md  benchmarks.md  finalized-stack.md  integration-validation.md  technical-constraints.md
scripts/: generate-test-media.sh
test-media/: README.md
test-media/synthetic/: openframe-captions.srt  phase0-whisper.txt
